application-templates/cms-jekyll/k8s/local-dev/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cms1-ing
  labels:
    name: cms1-ing
  # annotations:
  #   kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: cms1
            port: 
              number: 8080
